# solid-principles-tutorial

./: .gitignore  00_SOLID_Principles_Overview.ipynb  01_Single_Responsibility_Principle.ipynb  02_Open_Closed_Principle.ipynb  03_Liskov_Substitution_Principle.ipynb  04_Interface_Segregation_Principle.ipynb  05_Dependency_Inversion_Principle.ipynb  LICENSE  README.md  cube.txt  environment.yml  pyproject.toml  rectangle.txt  requirements.txt
examples/: bad_example.py  good_example.py
src/solid_inspector/: __init__.py  cli.py
