# SOLID Inspector - Project Configuration
# A comprehensive tool for analyzing code quality based on SOLID design principles

[project]
name = "solid-inspector"
version = "0.1.0"
description = "A comprehensive tool for analyzing and assessing code quality based on SOLID design principles"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Mahdi Habibi", email = "habibi.physics@gmail.com"},
]
keywords = ["solid", "design-principles", "code-analysis", "static-analysis", "code-quality", "refactoring", "python", "jupyter", "tutorial", "education", "software-engineering"]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.scripts]
solid-inspector = "solid_inspector.cli:cli"

[project.urls]
Homepage = "https://github.com/mdhabibi/solid-inspector"
Repository = "https://github.com/mdhabibi/solid-inspector"
Documentation = "https://github.com/mdhabibi/solid-inspector#readme"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py38"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
